Optimizations for Lint